--- a/src/style.css
+++ b/src/style.css
@@ -43,7 +43,7 @@ body {
     padding:0 2rem
 }
 .card-img {
-    width: 620px;
+    width: 100%;
     height: 320px;
     object-fit: cover;
 }
@@ -53,6 +53,7 @@ body {
     background-color: white;
     border-radius: 5px;
     overflow:hidden;
+    width: 50%;
 
 }
 .text{
